[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/InteractableThings/Note.png" type="Texture" id=1]
[ext_resource path="res://Objects/Note.gd" type="Script" id=2]
[ext_resource path="res://Shaders/CircleGlow.shader" type="Shader" id=3]
[ext_resource path="res://Asset/InteractableThings/NoteBack.png" type="Texture" id=4]
[ext_resource path="res://Asset/SoundEffect/ApriNota.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 18 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/color = Color( 0.984314, 1, 0.466667, 1 )
shader_param/speed = 4.553
shader_param/radius = 0.056
shader_param/width = 0.644

[node name="Note" type="Node2D"]
script = ExtResource( 2 )

[node name="NoteArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteArea"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="NoteArea"]
position = Vector2( 5, 5 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 1 )

[node name="NoteShadeBack" type="Sprite" parent="NoteArea"]
material = SubResource( 2 )
position = Vector2( 13.1709, 16.5851 )
scale = Vector2( 1.05664, 1.08789 )
z_index = 1
texture = ExtResource( 4 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="SEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="NoteArea" to="." method="_on_NoteArea_body_entered"]
